[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/enemies/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/spawner.gd" type="Script" id=2]
[ext_resource path="res://scenes/weapons/spawner_summon.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/enemies/spawner.png" type="Texture" id=4]
[ext_resource path="res://art/enemies/spawner2.png" type="Texture" id=5]
[ext_resource path="res://art/enemies/spawner3.png" type="Texture" id=6]
[ext_resource path="res://art/enemies/spawner4.png" type="Texture" id=7]
[ext_resource path="res://art/enemies/spawner5.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 64.0159, 49.0162 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ) ],
"loop": true,
"name": "firing",
"speed": 3.0
} ]
_sections_unfolded = [ "Resource" ]

[node name="spawner" instance=ExtResource( 1 )]

script = ExtResource( 2 )
weapon1 = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( -12, 5 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 2 )
animation = "default"
frame = 1
playing = true

[node name="weapon1_muzzle" parent="." index="2"]

position = Vector2( 24, -30 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="weapon1_timer" parent="weapon1" index="1"]

wait_time = 3.0

[node name="shootanim" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="regularanim" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="timeout" from="shootanim" to="." method="_on_shootanim_timeout"]

[connection signal="timeout" from="regularanim" to="." method="_on_regularanim_timeout"]


